# rt-scheduler-sim

./: .gitignore  LICENSE  README.md  pyproject.toml
apresentacao/: README.md  apresentacao.ipynb  dicionario.md  falas.md  main.py  requirements.txt
apresentacao/.ipynb_checkpoints/: apresentacao-checkpoint.ipynb
examples/: feasible.json  overload.json  rm_fails_edf_ok.json  three_tasks.json
rtsim/: __init__.py  cli.py  events.py  gantt.py  metrics.py  model.py  schedulers.py  simulator.py
scripts/: gen_charts.sh
slides/: Makefile  falas.md  main.tex
tests/: test_rtsim.py
